Include note about MAVEN_OPTS